test/files/neg/t10790.check
t10790.scala:10: warning: private class C in class X is never used
  private class C                  // warn
                ^
t10790.scala:8: warning: parameter value x in method control is never used
  def control(x: Int) = 42         // warn to verify control
              ^
error: No warnings can be incurred under -Werror.
two warnings found
one error found
